--- a/index.html
+++ b/index.html
@@ -1,14 +1,31 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>gerador de senha</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <img src="padlock-icon-260nw-745694785.jpg"alt="cadeado fechado">
-    <h2 class="titulo-principal">gerador de senhas</h2>
-    <h3 class="titulo=segundario">Gere instantaneamente uma senha aleatória e segura</h3>
+   <section class="conteudo"></section>
+    <div class="conteudo-titulo">
+       <img src="k81534.png"alt="cadeado fechado">
+       <h2 class="titulo-principal">gerador de senhas</h2>
+       <h3 class="titulo-secundario">Gere instantaneamente uma senha aleatória e segura</h3>
+    </div>
+    <div class="conteudo-senha">
+        <label for="senha">senha</label>
+        <input name="senha" type="text" id="campo-senha">
+    </div>
+    <div class="parametro">
+        <h3 class="parametro-titulo">personalize sua senha</h3>
+        <div class="parametro-colana_senha">
+
+        </div>
+    </div>
+   </section>
 </body>
+
 </html>
