--- a/index.html
+++ b/index.html
@@ -22,14 +22,20 @@
     <div class="parametro">
         <h3 class="parametro-titulo">personalize sua senha</h3>
         <div class="parametro-colana_senha">
-        <div class="parametro-senha">
-                <h4 class="parametro-senha_titulo">Numero de caracteres</h4>
-            </div>
-            <div class="parametro-senha">
-                <h4 class="parametro-senha_titulo">caracteristicas de senha</h4>
+          </div class="parametro-senha">
+            <h4 class="parametro-senha_titulo">Número de caracteres</h4>
+            <div class="parametro-senha-botoes"></div>
+            <button>-</button>
+            <p>12</p>
+            <button>+</button>
         </div>
-        <div class="parametro-senha">
-            <h4 class="parametro-senha_titulo">força de senha</h4>
+    </div class="parametro-senha">
+           <h4 class="parametro-senha_titulo">caracteristica da senha</h4>
+    </div>
+    <div class="parametro-senha">
+        <h4 class="parametro-senha_titulo">Força da senha</h4>
+      </div>
+      </div>
     </div>
    </section>
 </body>
