--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
           </div class="parametro-senha">
             <h4 class="parametro-senha_titulo">Número de caracteres</h4>
             <div class="parametro-senha-botoes"></div>
-            <button>-</button>
-            <p>12</p>
-            <button>+</button>
+            <button class="parametro-senha-botao">-</button>
+            <p class="parametro-senha_texto">12</p>
+            <button class="parametro-senha-botao">+</button>
         </div>
     </div class="parametro-senha">
            <h4 class="parametro-senha_titulo">caracteristica da senha</h4>
